--- a/p8105_hw5_pl2848.Rmd
+++ b/p8105_hw5_pl2848.Rmd
@@ -5,3 +5,71 @@ date: "2022-11-10"
 output: github_document
 ---
 
+
+
+```{r, include = FALSE, message=FALSE, warning=FALSE}
+library(tidyverse)
+library(rvest)
+
+knitr::opts_chunk$set(
+	echo = TRUE,
+	warning = FALSE,
+  fig.width = 6,
+  fig.asp = .6,
+  out.width = "90%"
+)
+
+theme_set(theme_minimal() + theme(legend.position = "bottom"))
+
+options(
+  ggplot2.continuous.colour = "viridis",
+  ggplot2.continuous.fill = "viridis"
+)
+
+scale_colour_discrete = scale_colour_viridis_d
+scale_fill_discrete = scale_fill_viridis_d
+```
+
+## Problem 1
+```{r}
+file_names <- list.files(path = "data")
+
+file_names <- paste0('data/', file_names)
+
+```
+
+
+```{r}
+map(file_names, read_csv)
+```
+
+
+```{r}
+# read the file and add new column city_state
+homicide = read_csv("data-homicides-master/homicide-data.csv") %>% 
+  mutate(city_state = paste(city, state, sep =", "))
+```
+
+
+```{r}
+# a function to determine whether the case was solved or not
+solved_or_not = function(x){
+  if(x == "Closed by arrest") {"solved"}
+  else "unsolved"
+}
+
+# Added a new column to see if the case was solved or unsolved
+homicide_by_city = homicide %>% 
+  mutate(status = as.character(map(disposition, solved_or_not))) %>% 
+  group_by(city, status) %>% 
+  summarise(number_of_homicides = n())
+
+homicide
+homicide_by_city
+
+```
+
+```{r}
+
+```
+
