--- a/p8105_hw5_pl2848.Rmd
+++ b/p8105_hw5_pl2848.Rmd
@@ -70,6 +70,8 @@ homicide_by_city
 ```
 
 ```{r}
-
+prop.test(2827, 1825, p = NULL,
+          alternative = c("two.sided", "less", "greater"),
+          conf.level = 0.95, correct = TRUE)
 ```
 
