--- a/p8105_hw5_pl2848.Rmd
+++ b/p8105_hw5_pl2848.Rmd
@@ -51,6 +51,8 @@ homicide = read_csv("data-homicides-master/homicide-data.csv") %>%
 ```
 
 
+
+
 ```{r}
 # a function to determine whether the case was solved or not
 solved_or_not = function(x){
@@ -61,7 +63,7 @@ solved_or_not = function(x){
 # Added a new column to see if the case was solved or unsolved
 homicide_by_city = homicide %>% 
   mutate(status = as.character(map(disposition, solved_or_not))) %>% 
-  group_by(city, status) %>% 
+  group_by(city_state, status) %>% 
   summarise(number_of_homicides = n())
 
 homicide
@@ -70,8 +72,12 @@ homicide_by_city
 ```
 
 ```{r}
-prop.test(2827, 1825, p = NULL,
+BMD_unsolved_test = prop.test(1825, 2827, p = NULL,
           alternative = c("two.sided", "less", "greater"),
           conf.level = 0.95, correct = TRUE)
+
+
+BMD_unsolved_test = broom::tidy(BMD_unsolved_test) %>% 
+  select(estimate, conf.low, conf.high)
 ```
 
